[package]
name = "ddnet-map-gen"
authors = ["Edgar <git@edgarluque.com>"]
description = "A DDraceNetwork map generator."
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/edg-l/ddnet-map-gen"
categories = ["command-line-utilities"]
keywords = ["ddnet", "teeworlds", "mapgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
fixed = "1.20.0"
irrgarten = "0.1.1"
itertools = "0.10.5"
ndarray = "0.15.6"
owo-colors = "3.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
twmap = "0.9.1"
